--- a/example11/style.css
+++ b/example11/style.css
@@ -8,7 +8,7 @@ Dec, 2010.
 
 body{
 	font-family: arial;
-	margin: 0px; /* for IE6 / IE7 */
+	margin: 0px; /* for IE */
 }
 
 
@@ -43,7 +43,7 @@ body{
 	background-color: CornflowerBlue;
 	opacity: 0.7;
 	filter: alpha(opacity=70);
-	/* without width, IE6/7 will not apply filter/opacity to the element ?! */
+	/* without width, IE7 will not apply filter/opacity to the element ?! */
 	width: 87px;
 	height: 30px;
 	padding-top: 10px; /* height of drag handle */
