--- a/example17/style.css
+++ b/example17/style.css
@@ -76,7 +76,7 @@ th {
 .row {
 	width: 20px;
 	margin: 2px;
-	border: 3px solid lime;
+	border: 2px solid LightBlue;
 	background-color: SteelBlue;
 	/* round corners */
 	border-radius: 14px; /* Opera, Chrome */
