--- a/example11/style.css
+++ b/example11/style.css
@@ -2,30 +2,30 @@
 
 Darko Bunic
 http://www.redips.net/
-Jul, 2011.
+Aug, 2011.
 
 */
 
-body{
+body {
 	font-family: arial;
 	margin: 0px; /* for IE */
 }
 
 
 /* drag container */
-#main_container{
+#main_container {
 	margin: auto;
-	width: 470px;
+	width: 870px;
 }
 		/* container for the left table */
-		#main_container #left{
-			width: 100px;
+		#main_container #left {
+			width: 200px;
 			height: 110px;
 			float: left;
 			margin-right: 20px;
 		}
 		/* container for the right table */
-		#main_container #right{
+		#main_container #right {
 		  	display: table;
 		    table-layout: auto;
 			padding-left: auto;
@@ -36,7 +36,7 @@ body{
 
 
 /* drag objects (DIV inside table cells) */
-.drag{
+.drag {
 	border: 1px solid lime;
 	cursor: move;
  	margin: auto;
@@ -44,17 +44,15 @@ body{
 	background-color: CornflowerBlue;
 	opacity: 0.7;
 	filter: alpha(opacity=70);
-	/* without width, IE7 will not apply filter/opacity to the element ?! */
-	width: 80px;
-	height: 30px;
-	padding-top: 10px; /* height of drag handle */
+	padding-top: 20px; /* height of drag handle */
+	width: 195px;
+	height: 120px;
 }
 	/* div inside drag div */
 	.nodrag {
 		cursor: default;
-		font-size: 15pt; /* needed for cloned object */
+		font-size: 15pt;  /* needed for cloned object */
 		background-color: white;
-		text-align: center;
 		height: 30px;
 	}
 
@@ -62,12 +60,12 @@ body{
 /* mini table */
 table#mini {
 	margin: 0px;
-	border: 0px:
+	border: 0px;
+	width: 195px;
 }
-	table#mini td{
+	table#mini td {
 		border: 1px CornflowerBlue solid;
-		padding: 0px;
-		height: 10px;
+		height: 39px;
 	}
 
 
@@ -87,7 +85,7 @@ div#drag table {
 #table1 td,
 #table2 td,th {
 	border-style: solid;
-	height: 70px;
+	height: 150px;
 	padding: 0px;
 }
 		/* left table - td */
@@ -98,32 +96,13 @@ div#drag table {
 		
 		/* right table - td */
 		#table2 td {
-			border-width: 0px 3px 3px 0px;
-			border-color: #DDC5B5;
-			font-weight: normal;
-		}
-
-		/* right table - th */
-		#table2 th {
-			border-width: 3px 0px 0px 3px;
-			border-color: #DDC5B5;
-			font-weight: normal;
-		}
-		
-		/* right table - upper right cell */
-		#table2 .upper_right{
-			border-width: 0px;
-		}
-
-		/* right table - lower left cell */
-		div#drag #table2 .lower_left{
-			border-width: 0px;
+			border: 2px #DDC5B5 solid;
 		}
 
 
 
 /* last row and last column without border */
-.noborder{
+.noborder {
 	border-width: 0px;
 }
 
@@ -135,7 +114,7 @@ div#drag table {
 
 
 /* message line */
-#message{
+#message {
 	color: white;
 	background-color: #aaa;
 	text-align: center;
@@ -144,11 +123,22 @@ div#drag table {
 
 
 /* dark cells (first column and table header) */
-.dark{
+.dark {
 	color: #444;
 	background-color: #e0e0e0;
 }
 
+/* circle */
+.circle {
+	width: 28px;
+	height: 28px;
+	text-align: center;
+	padding-top: 0px;
+	/* round corners */
+	border-radius: 20px; /* Opera, Chrome */
+	-moz-border-radius: 20px; /* FF */
+	background-color: #FFA15C;
+}
 
 /* trash cell */
 .trash {
