--- a/example21/style.css
+++ b/example21/style.css
@@ -2,7 +2,7 @@
 
 Darko Bunic
 http://www.redips.net/
-Oct, 2010.
+Oct, 2011.
 
 */
 
@@ -42,4 +42,19 @@ div#drag td{
 	line-height: 35px;
 	border: 2px solid SteelBlue;
 	background-color: white;
+	font-size: 10pt; /* needed for cloned object */
+	/* round corners */
+	border-radius: 4px; /* Opera, Chrome */
+	-moz-border-radius: 4px; /* FF */
+}
+
+/* orange elements */
+.orange {
+	border: 2px solid #FF8A58;
+}
+
+/* trash cell */
+.trash {
+	color: white;
+	background-color: SteelBlue;
 }
