--- a/example04/style.css
+++ b/example04/style.css
@@ -49,6 +49,9 @@ body{
 	width: 87px;
 	height: 40px;
 	line-height: 40px;
+	/* round corners */
+	border-radius: 4px; /* Opera, Chrome */
+	-moz-border-radius: 4px; /* FF */
 }
 
 
