--- a/style.css
+++ b/style.css
@@ -66,5 +66,5 @@ div#drag td {
 /* message cell (marked as forbidden) */
 .mark {
 	color: white;
-	background-color: #9B9EA2;
+	background-color: SteelBlue;
 }
