set border-collapse to separate

--- a/example15/style.css
+++ b/example15/style.css
@@ -22,6 +22,7 @@ body {
 /* set border-collapse */
 div#drag table {
 /* 	border-collapse: collapse; */
+	border-collapse: separate;
 	border-spacing: 0px;
 	width: 580px;
 }
