--- a/example11/style.css
+++ b/example11/style.css
@@ -42,8 +42,10 @@ body {
  	margin: auto;
 	z-index: 10;
 	background-color: CornflowerBlue;
-	opacity: 0.7;
-	filter: alpha(opacity=70);
+	/* setting z-index and opacity were messing things up (dragged DIV element goes below element in lower rows) */
+	/* http://stackoverflow.com/questions/2816780/div-popup-inside-td */
+/* 	opacity: 0.7; */
+/* 	filter: alpha(opacity=70); */
 	padding-top: 20px; /* height of drag handle */
 	width: 195px;
 	height: 120px;
