--- a/example02/style.css
+++ b/example02/style.css
@@ -37,6 +37,8 @@ body{
 	/* without width, IE6/7 will not apply filter/opacity to the element ?! */
 	/* IE needs element layout */
 	width: 82px;
+	height: 25px;
+	line-height: 25px;
 	/* round corners */
 	border-radius: 4px; /* Opera, Chrome */
 	-moz-border-radius: 4px; /* FF */
