--- a/example21/style.css
+++ b/example21/style.css
@@ -79,6 +79,11 @@ div#drag input {
 	margin-right: 10px;
 }
 
+/* margins for drop down menu */
+#dropDown {
+	margin: 7px 0 0 7px;
+}
+
 /* text style */
 .mycontrols {
 	margin: 5px;
