--- a/example25/style.css
+++ b/example25/style.css
@@ -14,7 +14,7 @@ body {
 /* main container */
 #main_container{
 	margin: auto;
-	width: 570px;
+	width: 670px;
 }
 
 /* make drag container visible */
@@ -39,21 +39,35 @@ div#drag td {
 	padding: 2px;
 }
 
-/* DIV elements */
-.drag {
+/* BOX class (common styles used for drag and result DIV */
+.box {
 	margin: auto;
 	margin-bottom: 1px;
 	margin-top: 1px;
 	font-size: 20pt;
 	text-align: center;
-	width: 40px;
+	width: 56px;
 	height: 40px;
 	line-height: 40px;
-	border: 2px solid SteelBlue;
 	background-color: white;
 	/* round corners */
 	border-radius: 4px; /* Opera, Chrome */
 	-moz-border-radius: 4px; /* FF */
+}
+
+/* DIV elements */
+.drag {
+	background-color: #CDE1F2;
+	border: 2px solid SteelBlue;
+}
+
+/* result DIV */
+.result {
+	background-color: #FFE6C4;
+	border: 2px solid #A66C1D;
+	/* cursor */
+	cursor: pointer;
+	cursor: hand;
 }
 
 /* forbidden cells */
