--- a/example00/style.css
+++ b/example00/style.css
@@ -2,17 +2,17 @@
 
 Darko Bunic
 http://www.redips.net/
-Oct, 2010.
+Apr, 2013.
 
 */
 
-body{
+body {
 	font-family: arial;
-	margin: 0px; /* for IE6 / IE7 */
+	margin: 0px;
 }
 
 /* make drag container visible */
-#redips-drag{
+#redips-drag {
 	border: 2px dashed LightBlue;
 	display: table;
 }
@@ -25,7 +25,7 @@ div#redips-drag table {
 }
 
 /* table cells */
-div#redips-drag td{
+div#redips-drag td {
 	border: 1px solid navy;
 	height: 50px;
 	text-align: center;
