--- a/example27/style.css
+++ b/example27/style.css
@@ -55,7 +55,7 @@ div#redips-drag table {
 }
 	/* table cells */
 	div#redips-drag td {
-		border: 1px solid white;
+		border: 1px solid #bfbfbf;
 		text-align: center;
 		font-size: 10pt;
 		padding: 0px;
