Cleaning code with ESLint tool ...

--- a/example03/style.css
+++ b/example03/style.css
@@ -59,7 +59,7 @@ body{
 
 /* tables */
 div#redips-drag table {
-	background-color: #eee;
+	background-color: #e4e4e4;
 	border-collapse: collapse;
 }
 		/* timetable */
