--- a/example09/style.css
+++ b/example09/style.css
@@ -84,6 +84,7 @@ div#redips-drag td {
 
 /* message line */
 #message {
+	padding: 5px;
 	color: white;
 	background-color: #aaa;
 	text-align: center;
