--- a/example22/style.css
+++ b/example22/style.css
@@ -65,7 +65,7 @@ body {
 
 /* tables general */
 div#redips-drag table {
-	background-color: #eee;
+	background-color: #ddd;
 	border-collapse: collapse;
 }
 	/* table cells */
