--- a/example23/style.css
+++ b/example23/style.css
@@ -55,7 +55,7 @@ body {
 
 /* tables general */
 div#redips-drag table {
-	background-color: #eee;
+	background-color: #ddd;
 	border-collapse: collapse;
 }
 	/* table cells */
